# experimental-kafka-queue

./: README.md
kafkajs-service/: index.js  package.json
main/: Cargo.toml
main/src/: main.rs
node-rdkafka-service/: index.js  package.json
ping-pong-service/: index.js
