[package]
name = "main"
version = "0.1.0"
authors = ["SaltyAom <aomkirby123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
futures = "0.3.15"
rand = "0.8.4"
rdkafka = "0.26.0"
tokio = { version = "1.7.1", features = ["full"] }
tokio-stream = "0.1.6"
